2002-07-04  Miguel Sofer  <msofer@users.sourceforge.net>

	* tests/basic.test: Same issue as below; fixed [Bug 575817]
	
2002-07-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tests/socket.test: 
	* tests/winPipe.test: 
	* tests/pid.test: Fixed SF Bug #575848. See below for a
	  description the general problem.

	* All the bugs below are instances of the same problem: The
	  testsuite assumes [pwd] = [temporaryDirectory] and writable.

	* tests/iogt.test: Fixed bug #575860.
	* tests/io.test:   Fixed bug #575862.
	* tests/exec.test: 
	* tests/ioCmd.test: Fixed bug #575836.

2002-07-03  Don Porter  <dgp@users.sourceforge.net>

	* tests/pkg1/direct1.tcl: removed
	* tests/pkg1/pkgIndex.tcl: removed
	* tests/pkgMkIndex.test:  Imported auxilliary files from tests/pkg1
	  into the test file pkgMkIndex.test itself.  Formatting fixes.

	* unix/Makefile.in: removed tests/pkg/* from `make dist`

	* tests/pkg/circ1.tcl: removed
	* tests/pkg/circ2.tcl: removed
	* tests/pkg/circ3.tcl: removed
	* tests/pkg/global.tcl: removed
	* tests/pkg/import.tcl: removed
	* tests/pkg/pkg1.tcl: removed
	* tests/pkg/pkg2_a.tcl: removed
	* tests/pkg/pkg2_b.tcl: removed
	* tests/pkg/pkg3.tcl: removed
	* tests/pkg/pkg4.tcl: removed
	* tests/pkg/pkg5.tcl: removed
	* tests/pkg/pkga.tcl: removed
	* tests/pkg/samename.tcl: removed
	* tests/pkg/simple.tcl: removed
	* tests/pkg/spacename.tcl: removed
	* tests/pkg/std.tcl: removed
	* tests/pkgMkIndex.test: Fixed [Bug 575857] where this test file
	  expected to be able to write to [file join [testsDirectory]
	  pkg].  Part of the fix was to import several auxilliary files
	  into the test file itself.

	* tests/main.test:	Cheap fix for [Bugs 575851, 575858].  Avoid
	* tests/tcltest.test:	non-writable . by [cd [temporaryDirectory]].

	* library/auto.tcl: Fix [tcl_findLibrary] to be sure it sets
	  $varName only if a successful library script is found.
	  [Bug 577033]

2002-07-03  Miguel Sofer  <msofer@users.sourceforge.net>
